Fix navbar gap at bottom of page

--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -1,10 +1,13 @@
 // Specific CSS for your home-page
+.page-wrapper{
+  min-height: 633px;
+}
 
-  a { color: $link-gray; }
-  a:hover {
-    text-decoration: none;
-    color: $green;
-  }
+a { color: $link-gray; }
+a:hover {
+  text-decoration: none;
+  color: $green;
+}
 
 .banner{
     color: white;
